# alpha_mini_platform

./: README.md  actions.json  main.py  requirements.txt  structure.txt
deploy/: setup.py
listeners/: speech_listener.py
mystring/: CMakeLists.txt
mystring/demo/: main.cpp
mystring/src/: mystring.cpp
src/alpha_mini_pkg/: __init__.py  launcher.py
src/alpha_mini_pkg/algorithms/: __init__.py  main_algorithm.py
src/alpha_mini_pkg/config/: settings.py
src/alpha_mini_pkg/core/: __init__.py  actions_wrapper.py  command_handler.py  dynamic_listener.py
src/alpha_mini_pkg/services/: __init__.py  api_client.py  connection_manager.py
src/alpha_mini_pkg/utils/: __init__.py  helpers.py
src/listeners/: __init__.py  speech_listener.py
tests/: run_tests.sh
tests/testing/: CMakeLists.txt  mystring.cpp  mystring.hpp
